<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NotesOfHomer</string>    
    <string name="homer_list">Notes Of Homer</string>
    <string name="username">username</string> 
    <string name="put_note">put your note</string> 
    <string name="add_pictire">Add Pictire</string>
    <string name="create_note">Create Note</string>
    <string name="created_by">Created by Team HomerSimpson</string>
    <string name="delete_old">Delete old</string>
    <string name="action_settings">Settings</string>
    <string name="medium_text">Medium Text</string>
    <string name="select_location">Select Location</string>
    
    <string name="confirm_delete">Do you want to delete this?</string>
	<string name="ok_message">Yes</string>
    <string name="cancel_message">Cancel</string>

</resources>
