<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
       
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/homer"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity" >
        
        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="24dp"
            android:text="@string/homer_list"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <requestFocus />

        <TextView
            android:id="@+id/footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:text="@string/created_by"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/userInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/header"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp"
            android:ems="10"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/submitNote"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignLeft="@+id/userInput"
            android:layout_below="@+id/userInput"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:hint="@string/put_note"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/addPicture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/submitNote"
            android:layout_below="@+id/submitNote"
            android:layout_marginTop="20dp"
            android:text="@string/add_pictire" />

        <Button
            android:id="@+id/createNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/addPicture"
            android:layout_below="@+id/addPicture"
            android:layout_marginTop="15dp"
            android:text="@string/create_note" />

        <Button
            android:id="@+id/selectLocationBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/createNote"
            android:layout_below="@+id/createNote"
            android:layout_marginTop="17dp"
            android:text="@string/select_location" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/selectLocationBtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp" />

    </RelativeLayout>

</ScrollView>